@@ -14,6 +14,8 @@
     * it is now possible to ask the weather station to test automatically the connectivity every period of time defined
     by the user if it is offline.
     * new options for in and out temperature/humidity/pressure, have been added to the option window.
+    * it is now possible to choose which sensor will feed temperature/humidity/pressure data.
+    * the sensor which feeds temperature data will feed battery and signal data.
 
   * FIXED:
     * a widget has been forgotten in keyboard window.
